fixed css contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -499,6 +499,7 @@ dialog {
 
     .outdoorLinks a {
         text-decoration: none;
+        color:darkblue;
     }
 
     .discover-header {
